# amitrahman1026.github.io

./: .gitignore  CNAME  Cargo.toml  Makefile  README.md  astro.config.mjs  bloglist.md  index.html  package-lock.json  package.json  personal-site-1b74ec65e02704c7.js  personal-site-4b830b5b84b26662.js  personal-site-4b830b5b84b26662_bg.wasm  personal-site-5632c440bb7c32a5.js  personal-site-85fd0c41554f5643.js  personal-site-f701ff98cf6fa57a.js  style-413975fa87af1433.css  style-a1ca750158874d2.css  style-d16526ced61f47ed.css  style-e7e0d45117aef2bd.css  tailwind.config.mjs  tsconfig.json
.github/workflows/: deploy.yml
assets/: about_me.md  bloglist.md
assets/blogposts/: (2024-01-31-1706631622)_Building%20a%20Personal%20Blog%20Site%20in%202024%3A%20A%20Rusty%20Adventure.md  (2024-03-04-1709611744)_Intro%20to%20Embedded%20Scripting.md  (2024-04-20-1713615134)_Dynamic%20Dispatch.md  (2024-11-11-1731258637)_Cracking%20open%20macOS%20Dynamic%20Libraries.md
assets/css/: style.css
assets/resume/: resume.typ
blogposts/: (2024-01-31-1706631622)_Building%20a%20Personal%20Blog%20Site%20in%202024%3A%20A%20Rusty%20Adventure.md  (2024-03-24-1711305012)_Exploring%20CPP%20Lambdas.md
public/: resume.typ
resume/: resume.tex
scripts/: build_md_lists.sh  new_blogpost.sh
src/: components.rs  consts.ts  main.rs
src/components/: Footer.astro  Giscus.astro  Head.astro  Header.astro  Link.astro  SocialIcons.astro  about_me.rs  bloglist.rs  blogpost.rs  contact.rs  markdown_component.rs  projects.rs  resume.rs
src/layouts/: Layout.astro
src/pages/: contact.astro  rss.xml.js  (+1 more)
(+10 files in other folders)
