[package]
name = "personal-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
pulldown-cmark = "0.9.3"
gloo-utils = "0.1.6"
web-sys = { version = "0.3.63", features = ["HtmlElement", "DomTokenList", "Window", "MediaQueryList"] }
wasm-bindgen-futures = "0.4.36"
wasm-bindgen = "0.2"
reqwest = "0.11.18"